# nix

./: meson.build
packaging/: dev-shell.nix
src/nix-pybind/: meson.build
src/nix-pybind/bindings/: bindings.cc  bindings.cpp  bindings.hh  libexpr-pybind.cc  libexpr_bindings.cpp  libflake-pybind.cc  libstore-pybind.cc  libstore_bindings.cpp  libutil-pybind.cc  libutil_bindings.cpp
src/nix-pybind/tests/: libstore.py  libutil.py
